fix spacing of arnhem page

--- a/src/styles/5-pages/experiences.scss
+++ b/src/styles/5-pages/experiences.scss
@@ -97,12 +97,11 @@
   padding: 0px;
 }
 
-
 .photo-section-8, .photo-section-7, .photo-section-6, .photo-section-6-v2, .photo-section-5, .photo-section-4, .photo-section-4-v2, .photo-section-3, .photo-section-2, .photo-section-1, .end-caption {
   display: grid;
   grid-template-columns: 1fr repeat(18, 4vw) 1fr;
-  gap: 0.8em;
-  width: 100%;
+  gap: 1.8em;
+  width: 98%;
   margin-top: 2%;
   align-items: start;
 }
@@ -535,7 +534,6 @@
 .photo-section-7 {
   grid-template-rows: 2;
   margin-bottom: 20%;
-  padding: 2em;
 }
 .photo-section-7 .layout-item:first-child {
   grid-row: 1;
@@ -664,12 +662,12 @@
 }
 
 .end-caption .section-caption {
-  grid-column: 6/14;
+  grid-column: 4/12;
   line-height: 150%;
 }
 
 .end-caption .section-caption#melkhuis {
-    grid-column: 5/13;
+    grid-column: 4/13;
     grid-row: 1;
 }
 
